--- a/Jonas Schmedtmann/JavaScript/01-Fundamentals-Part-1/starter/index.html
+++ b/Jonas Schmedtmann/JavaScript/01-Fundamentals-Part-1/starter/index.html
@@ -22,7 +22,8 @@
         color: white;
       }
     </style>
-    <script src='script.js'></script>
+    <!-- <script src='script.js'></script> -->
+    <script src='assignment1.js'></script>
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
