--- a/Jonas Schmedtmann/JavaScript/01-Fundamentals-Part-1/starter/index.html
+++ b/Jonas Schmedtmann/JavaScript/01-Fundamentals-Part-1/starter/index.html
@@ -22,8 +22,9 @@
         color: white;
       }
     </style>
-    <!-- <script src='script.js'></script> -->
-    <script src='assignment1.js'></script>
+    <script src='script.js'></script>
+    <!-- <script src='assignments.js'></script> -->
+    <!-- <script src='challenges.js'></script> -->
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
