--- a/Jonas Schmedtmann/JavaScript/01-Fundamentals-Part-1/starter/index.html
+++ b/Jonas Schmedtmann/JavaScript/01-Fundamentals-Part-1/starter/index.html
@@ -30,3 +30,6 @@
     <h1>JavaScript Fundamentals – Part 1</h1>
   </body>
 </html>
+
+<!-- git config --global user.name Joe-Townsend
+git config --global user.email joetown30@outlook.com -->
